--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,90 @@
 {
   "manifest_version": 3,
-  "name": "EasyApply",
-  "short_name": "EasyApply",
-  "version": "1.0",
-  "description": "Apply to 100’s of jobs application system EasyApply.",
+  "minimum_chrome_version": "114",
+  "name": "Job Search Assistant",
+  "short_name": "JobAssistant",
+  "version": "1.0.0",
+  "description": "Assist with LinkedIn job search and application process within platform guidelines.",
   "background": {
-    "service_worker": "background/bg-loader.js"
+    "service_worker": "src/background/service-worker.js"
   },
   "icons": {
+    "16": "icons/icon16.png",
     "32": "icons/icon32.png",
     "64": "icons/icon64.png",
     "128": "icons/icon128.png"
   },
   "action": {
     "browser_style": false,
-    "default_title": "initial",
-    "default_popup": "pop-up.html"
+    "default_title": "Job Search Assistant"
+  },
+
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Y",
+        "mac": "Command+Shift+Y"
+      },
+      "description": "Open Job Search Assistant Panel"
+    }
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "permissions": [
-    "tabs",
     "storage",
+    "tabs",
     "cookies",
-    "alarms"
+    "alarms",
+    "scripting",
+    "windows",
+    "sidePanel"
   ],
   "host_permissions": [
-    "<all_urls>",
-    "*://*.linkedin.com/*"
+    "https://*.linkedin.com/*"
   ],
   "content_scripts": [
     {
-      "matches": ["*://*.linkedin.com/*","*://*/*" ],
-      "js": [
-        "/assets/js/jquery-3.4.1.min.js",
-        "/config.js",
-        "/content/js/helper.js",
-        "/content/js/content.js"
+      "matches": [
+        "https://*.linkedin.com/jobs/view/*",
+        "https://*.linkedin.com/jobs/collections/*"
       ],
-      "css": ["/content/css/content.css"],
+      "js": [
+        "src/content/content.js"
+      ],
+      "css": ["src/content/content.css"],
+      "all_frames": false,
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.linkedin.com/jobs/*"
+      ],
+      "js": [
+        "src/content/job-gatherer.js"
+      ],
       "all_frames": false,
       "run_at": "document_end"
     }
   ],
+  "side_panel": {
+    "default_path": "src/sidepanel/sidepanel.html"
+  },
   "web_accessible_resources": [
     {
-      "resources": ["icons/icon32.png"],
-      "matches": ["<all_urls>"],
-      "extension_ids": []
+      "resources": [
+        "icons/icon32.png",
+        "src/popup/popup.css",
+        "src/sidepanel/sidepanel.css",
+        "src/sidepanel/sidepanel.html",
+        "src/sidepanel/sidepanel.js",
+        "src/main/main.css",
+        "src/main/main.html",
+        "src/main/main.js",
+        "src/utils/description-extractor.js",
+        "assets/css/style.css"
+      ],
+      "matches": ["<all_urls>"]
     }
   ]
 }
